--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
     <script src="dist/SignOut.js"></script>
     <script src="dist/OnSignOut.js"></script>
     <script src="dist/release.js"></script>
+    <script src="dist/fact.js"></script>
     <script>
         var myStorage = window.localStorage, pageCount;
         $(document).ready(() => {
