--- a/logar.html
+++ b/logar.html
@@ -190,6 +190,25 @@
         <div class="my-4">
             <a href="https://www.google.com/search?q=logarithm" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
+        <hr style="width: 50%">
+        <h3>Natural Logarithm</h3>
+        <form autocomplete="off">
+            <div class="center-form">
+                <input type="number" id="natnum" placeholder="number" name="side" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="button2" class="btn btn-success btn-lg" value="Calculate">
+            </div>
+        </form>
+        <br>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output2"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=natural+logarithm" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
