--- a/fact.html
+++ b/fact.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- MAIL -->
-    <meta name="yandex-verification" content="f86171133514f762" />
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MathFlare - Linear Systems</title>
+    <title>MathFlare - Factorials</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
     <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
@@ -29,15 +27,12 @@
     <link href="Styles/Profile.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
     <!-- SCRIPTS -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script data-ad-client="ca-pub-1524024547471266" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- POPPER.JS ONLY FOR TOOLPITS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
     <script>
@@ -152,13 +147,14 @@
                         <a href="avg.html" class="dropdown-item"><i class="bi bi-pie-chart"></i> Average Calculator</a>
                         <a href="percent.html" class="dropdown-item"><i class="bi bi-percent"></i> Percentage Calculator</a>
                         <a href="round.html" class="dropdown-item"><i class="bi bi-arrows-expand"></i> Round Numbers</a>
+                        <a href="fact.html" class="dropdown-item aactive"><i class="bi bi-exclamation"></i> Factorials</a>
                         <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Equations</h5>
                         <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
                         <a href="equations-second.html" class="dropdown-item"><i class="bi bi-percent"></i> 2nd Degree</a>
                         <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Systems of Equations</h5>
-                        <a href="linear-systems.html" class="dropdown-item aactive"><i class="bi bi-border-width"></i> Linear Systems</a>
+                        <a href="linear-systems.html" class="dropdown-item"><i class="bi bi-border-width"></i> Linear Systems</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -170,87 +166,26 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Linear 2x2 Systems; ax + by = c</h1>
+        <h1 class="text-white">Factorials</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-        <h3 class="text-white">First Equation:</h3>
-        <hr class="bg-danger" style="width: 50%;" />
-        <h4 class="text-white">Enter the value of <i>a</i></h4>
+        <h4 class="text-white">Enter the number</h4>
         <div class="center-form">
-            <input type="number" id="a1" placeholder="a" name="a1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br />
-        <h4 class="text-white">Enter the value of <i>b</i></h4>
-        <div class="center-form">
-            <input type="number" id="b1" placeholder="b" name="b1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <h4 class="text-white">Enter the value of <i>c</i></h4>
-        <div class="center-form">
-            <input type="number" id="c1" placeholder="c" name="c1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <h3 class="text-white">Second Equation:</h3>
-        <hr class="bg-danger" style="width: 50%;" />
-        <h4 class="text-white">Enter the value of <i>a</i></h4>
-        <div class="center-form">
-            <input type="number" id="a2" placeholder="a" name="a2" class="form-control mb-0" step="0.01" />
-        </div>
-        <br />
-        <h4 class="text-white">Enter the value of <i>b</i></h4>
-        <div class="center-form">
-            <input type="number" id="b2" placeholder="b" name="b2" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <h4 class="text-white">Enter the value of <i>c</i></h4>
-        <div class="center-form">
-            <input type="number" id="c2" placeholder="c" name="c2" class="form-control mb-0" step="0.01" />
+            <input type="number" id="number" placeholder="radicand" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br />
         <div class="center-form">
             <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
         </div>
         </form>
-        <br />
+        <br>
         <div style="max-height: 1em;">
             <p class="text-success" id="output"></p>
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=Solve+Linear+2x2+systems" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=calculate+the+factorial+of+a+number" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
-        <hr style="width: 60%;">
-        <h3>Case X = Y; ax + by = c</h3>
-        <hr style="width: 50%;">
-        <form autocomplete="off">
-            <h4 class="text-white">Enter the value of <i>a</i></h4>
-        <div class="center-form">
-            <input type="number" id="a3" placeholder="a" name="a1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br />
-        <h4 class="text-white">Enter the value of <i>b</i></h4>
-        <div class="center-form">
-            <input type="number" id="b3" placeholder="b" name="b1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <h4 class="text-white">Enter the value of <i>c</i></h4>
-        <div class="center-form">
-            <input type="number" id="c3" placeholder="c" name="c1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="button2" class="btn btn-success btn-lg" value="Calculate">
-        </div>
-        </form>
-        <br />
-        <div style="max-height: 1em;">
-            <p class="text-success" id="output2"></p>
-        </div>
-        <br>
-        <div class="my-4">
-            <a href="https://www.google.com/search?q=Solve+Linear+2x2+systems+when+x=y" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
-        </div>
-        </form>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
@@ -258,13 +193,7 @@
     <script src="dist/SignIn.js"></script>
     <script src="dist/SignOut.js"></script>
     <script src="dist/OnSignOut.js"></script>
-    <script src="dist/linear-systems.js"></script>
-    <script src="dist/linear-systems-x-equals-y.js"></script>
-    <script>
-        $(function () {
-            $('[data-bs-toggle="tooltip"]').tooltip()
-        })
-    </script>
+    <script src="dist/fact.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
