--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
     </div>
     </nav>
     <!-- NAVBAR END -->
-    <!-- <div class="alert alert-dismissible fade show m-2 text-center user-select-none" style="z-index: 99999;" role="alert">
-        Long time no see stanger... Check out our <a href="equations-second.html" class=" text-dark">2nd degree equation solver</a>!
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div> -->
+    <div class="alert alert-dismissible fade show m-2 text-center user-select-none bg-dark" style="z-index: 99999;" role="alert">
+        Hello stranger! We are looking for contributors. <a href="https://github.com/mathflare/mathflare" target="_blank" rel="noopener" class="alert-link">Are you in?</a>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     <div class="dead-center">
         <h1 class="text-white fs-1"><img src="Assets/icon.png" class=" user-select-none logo" style="height: 1em; transform: rotate(180deg);" alt="logo"> MathFlare</span></h1>
         <h3 class="text-danger fs-3">the go-to site for geometry and algebra</h3>
@@ -190,8 +190,6 @@
     <script src="dist/SignIn.js"></script>
     <script src="dist/SignOut.js"></script>
     <script src="dist/OnSignOut.js"></script>
-    <script src="dist/release.js"></script>
-    <script src="dist/fact.js"></script>
     <script>
         var myStorage = window.localStorage, pageCount;
         $(document).ready(() => {
@@ -205,18 +203,16 @@
         });
     </script>
     <script>
-        $(() => {
-            $('[data-bs-toggle="tooltip"]').tooltip()
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {  
+            return new bootstrap.Tooltip(tooltipTriggerEl)
         })
     </script>
     <script>
-        $(document).ready(() => {
-            console.log("%cHello Sir looking around in the console, we recently changed our website's name from Liquid Geometry to MathFlare. Anyways, happy hacking!","font-family:consolas; font-size: 20px");
+            console.log("%cHello Sir looking around in the console! Insted of hacking, what about you contribute to MathFlare on GitHub?","font-family:consolas; font-size: 20px");
             console.log("%cMathFlare","color: DodgerBlue; font-weight: 600; font-family:consolas; font-size: 40px");
             console.log("%csame site, same functionality, different name!","color: OrangeRed; font-weight: 500; font-family:consolas; font-size: 25px");
             console.log("%cby the way, the curiosity killed the cat you know...","color: PaleGreen; font-weight: 600; font-family:consolas; font-size: 20px");
-            console.log("%ccourtesy of MathFlare LLC.","color: DodgerBlue; font-weight: 400; font-family:consolas");
-        }); 
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
