--- a/clenght.html
+++ b/clenght.html
@@ -168,6 +168,7 @@
     <div class="center mb-5">
         <h1 class="text-white">Length Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
+        <form autocomplete="off">
         <h4 class="text-white">Feet</h4>
         <div class="center-form">
             <input id="inputFeet" class="form-control mb-0" type="number" placeholder="Feet" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
@@ -196,6 +197,11 @@
         <div class="center-form">
             <input id="inputMiles" class="form-control mb-0" type="number" placeholder="Miles" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
+        <br>
+        <div class="center-form">
+            <input type="reset" class="btn btn-danger" value="Reset">
+        </div>
+        </form>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
