--- a/cspeed.html
+++ b/cspeed.html
@@ -168,6 +168,7 @@
     <div class="center mb-5">
         <h1 class="text-white title">Speed Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
+        <form autocomplete="off">
         <h4 class="text-white m-2">MPH</h4>
         <div class="center-form">
             <input id="inputMPH" class="form-control mb-0" type="number" placeholder="MPH" oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)">
@@ -184,6 +185,11 @@
         <div class="center-form">
             <input id="inputMach" class="form-control mb-0" type="number" placeholder="Mach" oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)">
         </div>
+        <br>
+        <div class="center-form">
+            <input type="reset" class="btn btn-danger" value="Reset">
+        </div>
+        </form>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
