--- a/ctemp.html
+++ b/ctemp.html
@@ -168,6 +168,7 @@
     <div class="center mb-5">
         <h1 class="text-white title">Temperature Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
+        <form autocomplete="off">
         <h4 class="text-white m-2">Fahrenheit</h4>
         <div class="center-form">
             <input id="inputFahrenheit" class="form-control mb-0" type="number" min="-459.66999999999996" placeholder="Fahrenheit" oninput="temperatureConverter(this.id,this.value)" onchange="temperatureConverter(this.id,this.value)">
@@ -180,6 +181,11 @@
         <div class="center-form">
             <input id="inputKelvin" class="form-control mb-0" type="number" min="0" placeholder="Kelvin" oninput="temperatureConverter(this.id,this.value)" onchange="temperatureConverter(this.id,this.value)">
         </div>
+        <br>
+        <div class="center-form">
+            <input type="reset" class="btn btn-danger" value="Reset">
+        </div>
+        </form>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
