--- a/cweight.html
+++ b/cweight.html
@@ -168,6 +168,7 @@
     <div class="center mb-5">
         <h1 class="text-white title">Weight Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
+        <form autocomplete="off">
         <h4 class="text-white">Pounds</h4>
         <div class="center-form">
             <input id="inputPounds" class="form-control mb-0" type="number" placeholder="Pounds" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
@@ -188,6 +189,11 @@
         <div class="center-form">
             <input id="inputStones" class="form-control mb-0" type="number" placeholder="Stones" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
         </div>
+        <br>
+        <div class="center-form">
+            <input type="reset" class="btn btn-danger" value="Reset">
+        </div>
+        </form>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
