added reset button to linear system calc

--- a/linear-systems.html
+++ b/linear-systems.html
@@ -208,8 +208,9 @@
             <input type="number" id="c2" placeholder="c" name="c2" class="form-control mb-0" step="0.01" />
         </div>
         <br />
-        <div class="center-form">
+        <div class="center-form gap-2">
             <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
+            <input type="reset" class="btn btn-danger btn-lg" value="Reset">
         </div>
         </form>
         <br />
