--- a/fact.html
+++ b/fact.html
@@ -171,7 +171,7 @@
         <form autocomplete="off">
         <h4 class="text-white">Enter the number</h4>
         <div class="center-form">
-            <input type="number" id="number" placeholder="radicand" class="form-control mb-0" step="0.01" min="0" />
+            <input type="number" id="number" placeholder="number" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br />
         <div class="center-form">
@@ -184,7 +184,8 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+the+factorial+of+a+number" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=calculate+the+factorial+of+a+number" target="_blank" rel="noopener" class="btn btn-outline-light m-2">Find information on the web</a>
+            <a href="formulas.html#factorials" class="btn btn-outline-light">Popular Factorials</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
