--- a/logar.html
+++ b/logar.html
@@ -192,7 +192,7 @@
             <a href="https://www.google.com/search?q=logarithm" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr style="width: 50%">
-        <h3>Natural Logarithm</h3>
+        <h3>Natural Logarithm; log<sub>e</sub></h3>
         <form autocomplete="off">
             <div class="center-form">
                 <input type="number" id="natnum" placeholder="number" name="side" class="form-control mb-0" step="0.01" min="0" />
