--- a/formulas.html
+++ b/formulas.html
@@ -207,6 +207,99 @@
             </tbody>
         </table>
         </section>
+        <section id="factorials" >
+            <h3 class="text-white" id="title">Popular Factorials</h3>
+            <table class="table table-bordered text-white formulas-table" id="trig-nums">
+                <thead class="bg-primary head">
+                    <tr>
+                        <th>Number n</th>
+                        <th>Factorial n!</th>
+                    </tr>
+                </thead>
+                <tbody class="formulas-body">
+                    <tr>
+                        <td>0!</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>2!</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>3!</td>
+                        <td>6</td>
+                    </tr>
+                    <tr>
+                        <td>4!</td>
+                        <td>24</td>
+                    </tr>
+                    <tr>
+                        <td>5!</td>
+                        <td>120</td>
+                    </tr>
+                    <tr>
+                        <td>6!</td>
+                        <td>720</td>
+                    </tr>
+                    <tr>
+                        <td>7!</td>
+                        <td>5,040</td>
+                    </tr>
+                    <tr>
+                        <td>8!</td>
+                        <td>40,320</td>
+                    </tr>
+                    <tr>
+                        <td>9!</td>
+                        <td>362,880</td>
+                    </tr>
+                    <tr>
+                        <td>10!</td>
+                        <td>3,628,800</td>
+                    </tr>
+                    <tr>
+                        <td>11!</td>
+                        <td>39,916,800</td>
+                    </tr>
+                    <tr>
+                        <td>12!</td>
+                        <td>479,001,600</td>
+                    </tr>
+                    <tr>
+                        <td>13!</td>
+                        <td>6,227,020,800</td>
+                    </tr>
+                    <tr>
+                        <td>14!</td>
+                        <td>87,178,291,200</td>
+                    </tr>
+                    <tr>
+                        <td>15!</td>
+                        <td>1,307,674,368,000</td>
+                    </tr>
+                    <tr>
+                        <td>16!</td>
+                        <td>20,922,789,888,000</td>
+                    </tr>
+                    <tr>
+                        <td>17!</td>
+                        <td>355,687,428,096,000</td>
+                    </tr>
+                    <tr>
+                        <td>18!</td>
+                        <td>6,402,373,705,728,000</td>
+                    </tr>
+                    <tr>
+                        <td>19!</td>
+                        <td>121,645,100,408,832,000</td>
+                    </tr>
+                    <tr>
+                        <td>20!</td>
+                        <td>2,432,902,008,176,640,000</td>
+                    </tr>
+                </tbody>
+            </table>
+            </section>
         <p class="text-white">more coming soon!</p>
         </div>
     <!-- SCRIPTS START -->
