--- a/inequalities.html
+++ b/inequalities.html
@@ -175,7 +175,7 @@
         <hr class="bg-danger" style="width: 60%;" />
         <!-- ax+c>0 START -->
         <form autocomplete="off">
-        <h4 class="text-white">A * X + C &#62; 0</h4>
+        <h4 class="text-white">A &#215; X &#43; C &#62; 0</h4>
         <div class="center-form">
             <input type="number" id="a1" placeholder="A" class="form-control mb-0" step="0.01" />
         </div>
@@ -200,7 +200,7 @@
         <!-- ax+c>=0 START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">A * X + C &#8805; 0</h4>
+        <h4 class="text-white">A &#215; X &#43; C &#8805; 0</h4>
         <div class="center-form">
             <input type="number" id="a2" placeholder="A" class="form-control mb-0" step="0.01" />
         </div>
@@ -225,7 +225,7 @@
         <!-- ax+c<0 START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">A * X + C &#60; 0</h4>
+        <h4 class="text-white">A &#215; X &#43; C &#60; 0</h4>
         <div class="center-form">
             <input type="number" id="a3" placeholder="A" class="form-control mb-0" step="0.01" />
         </div>
@@ -250,7 +250,7 @@
         <!-- ax+c<=0 START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">A * X + C &#8804; 0</h4>
+        <h4 class="text-white">A &#215; X &#43; C &#8804; 0</h4>
         <div class="center-form">
             <input type="number" id="a4" placeholder="A" class="form-control mb-0" step="0.01" />
         </div>
