--- a/area.html
+++ b/area.html
@@ -297,7 +297,7 @@
             </div>
             <br>
             <div class="my-4">
-                <a href="https://www.google.com/search?q=circle+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+                <a href="https://www.google.com/search?q=trapezoid+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
             </div>
     </div>
     <!-- SCRIPTS START -->
