prod: use typescript

--- a/inequalities.html
+++ b/inequalities.html
@@ -281,7 +281,7 @@
     <script src="dist/OnSignOut.js"></script>
     <script src="dist/inequalities-first-deg.js"></script>
     <script>
-        var myStorage = window.localStorage, equation;
+        var myStorage = window.localStorage, ineq;
         $(".ineq").click(function (e) { 
             e.preventDefault();
             if(!myStorage.getItem("ineq")){
