--- a/stats.html
+++ b/stats.html
@@ -175,8 +175,8 @@
         <button class="btn btn-success me-3 mb-3" onclick="loadStats()" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Refresh your statistics count">Refresh Stats <i class="bi bi-arrow-clockwise"></i></button>
         <button class="btn btn-danger me-3 mb-3" onclick="clearStats()" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Delete all your statistics">Reset Stats <i class="bi bi-trash-fill"></i></button>
         <p class="text-white">Total Visits: <span id="page-views"></span></p>
-        <p class="text-white">Total Statistics Page Views: <span id="stat-views"></span></p>
         <p class="text-white">Total Equations Solved: <span id="equations-solved"></span></p>
+        <p class="text-white">Total Inequalities Solved: <span id="ineq"></span></p>
         <p class="text-white">Total Formulas Page Views: <span id="formulas-views"></span></p>
     </div>
     <!-- SCRIPTS START -->
