--- a/inequalities.html
+++ b/inequalities.html
@@ -281,17 +281,20 @@
     <script src="dist/OnSignOut.js"></script>
     <script src="dist/inequalities-first-deg.js"></script>
     <script>
-        var myStorage = window.localStorage, ineq;
-        $(".ineq").click(function (e) { 
-            e.preventDefault();
-            if(!myStorage.getItem("ineq")){
-                myStorage.setItem('ineq', 1);
+        var storage = window.localStorage, ineq;
+        const ele = document.querySelectorAll('.ineq');
+        for (let i = 0; i < ele.length; i++) {
+            ele[i].addEventListener('click', (event) => {
+            event.preventDefault();
+            if(!storage.getItem("ineq")){
+                storage.setItem('ineq', 1);
             } else {
-                ineq = myStorage.getItem("ineq");
+                ineq = storage.getItem("ineq");
                 ineq = parseFloat(ineq) + parseFloat(1);
-                myStorage.setItem('ineq',ineq );
+                storage.setItem('ineq',ineq );
             }
         });
+        }
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
