--- a/index.html
+++ b/index.html
@@ -172,6 +172,17 @@
         Hello stranger! We are looking for contributors. <a href="https://github.com/mathflare/mathflare" target="_blank" rel="noopener" class="alert-link">Are you in?</a>
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- general-unit -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-1524024547471266"
+        data-ad-slot="1807537271"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <div class="dead-center">
         <h1 class="text-white fs-1"><img src="Assets/icon.png" class=" user-select-none logo" style="height: 1em; transform: rotate(180deg);" alt="logo"> MathFlare</span></h1>
         <h3 class="text-danger fs-3">the go-to site for geometry and algebra</h3>
