prod: ad styling

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <a href="https://www.instagram.com/mathflare" target="_blank" rel="noopener" class="btn btn-danger m-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sponsored"><i class="bi bi-instagram"></i> Instagram</a>
         </div>
     </div>
-    <div id="135252154">
+    <div id="135252154" class="ad-unit">
         <script type="text/javascript">
             try {
                 window._mNHandle.queue.push(function (){
