--- a/phypotenuse.html
+++ b/phypotenuse.html
@@ -57,21 +57,29 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Contact
+                        Algebra
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a href="contact.html" class="dropdown-item"><i class="bi bi-telephone-fill"></i> Contact Form</a>
-                        <a href="https://github.com/mathflare" target="_blank" class="dropdown-item"><i class="bi bi-github"></i> GitHub</a>
-                        <a href="mailto:liquid-geometry@dkatsios.tk" target="_blank" class="dropdown-item"><i class="bi bi-envelope-fill"></i> Email</a>
-                        <a href="https://discord.com/invite/VwvQNYzU5M" target="_blank" class="dropdown-item"><i class="bi bi-discord"></i> Discord</a>
-                        <a href="https://twitter.com/damik_raw" target="_blank" class="dropdown-item"><i class="bi bi-twitter"></i> Twitter</a>
-                        <a href="https://www.instagram.com/mathflare/" class="dropdown-item"><i class="bi bi-instagram"></i> Instagram</a>
-                        <a href="https://api.mathflare.tk" target="_blank" class="dropdown-item"><i class="bi bi-hdd-stack-fill"></i> REST API</a>
-                        <a href="https://developers.mathflare.tk" target="_blank" class="dropdown-item"><i class="bi bi-code-slash"></i> For Developers</a>
-                        <a href="https://github.com/mathflare/mathflare" target="_blank" class="dropdown-item"><i class="bi bi-terminal-fill"></i> Clone the Repo</a>
-                        <a href="https://github.com/mathflare/mathflare/issues" target="_blank" class="dropdown-item"><i class="bi bi-bug-fill"></i> Report a Bug</a>
-                        <a href="https://github.com/mathflare/mathflare/issues" target="_blank" class="dropdown-item"><i class="bi bi-lightbulb-fill"></i> Suggest an Edit</a>
+                        <h5 class="dropdown-header">Basic Algebra</h5>
+                        <a href="logar.html" class="dropdown-item"><i class="bi bi-percent"></i> Logarithms</a>
+                        <a href="sqrt.html" class="dropdown-item"><i class="bi bi-calculator"></i> Square Root Calculator</a>
+                        <a href="cbrt.html" class="dropdown-item"><i class="bi bi-calculator"></i> Cube Root Calculator</a>
+                        <a href="pow.html" class="dropdown-item"><i class="bi bi-power"></i> Exponents(powers)</a>
+                        <a href="avg.html" class="dropdown-item"><i class="bi bi-pie-chart"></i> Average Calculator</a>
+                        <a href="percent.html" class="dropdown-item"><i class="bi bi-percent"></i> Percentage Calculator</a>
+                        <a href="round.html" class="dropdown-item"><i class="bi bi-arrows-expand"></i> Round Numbers</a>
+                        <a href="fact.html" class="dropdown-item"><i class="bi bi-exclamation-lg"></i> Factorials</a>
+                        <div class="dropdown-divider"></div>
+                        <h5 class="dropdown-header">Equations</h5>
+                        <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
+                        <a href="equations-second.html" class="dropdown-item"><i class="bi bi-percent"></i> 2nd Degree</a>
+                        <div class="dropdown-divider"></div>
+                        <h5 class="dropdown-header">Inequalities</h5>
+                        <a href="inequalities.html" class="dropdown-item"><i class="bi bi-code"></i> 1st Degree</a>
+                        <div class="dropdown-divider"></div>
+                        <h5 class="dropdown-header">Systems of Equations</h5>
+                        <a href="linear-systems.html" class="dropdown-item"><i class="bi bi-border-width"></i> Linear 2&#215;2 Systems</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -88,15 +96,13 @@
                 </li>
                 <li class="nav-item dropdown active">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Trigognometry
+                        Trigonometry
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <h5 class="dropdown-header">Pythagorean Theorem</h5>
                         <a href="phypotenuse.html" class="dropdown-item aactive"><i class="bi bi-symmetry-vertical"></i> Hypotenuse Calculator</a>
                         <a href="prightside.html" class="dropdown-item"><i class="bi bi-symmetry-vertical"></i> Leg Calculator</a>
-                        <div class="dropdown-divider"></div>
-                        <a href="equaltri.html" class="dropdown-item"><i class="bi bi-symmetry-vertical"></i> Equal Triangles</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -106,14 +112,9 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a href="clenght.html" class="dropdown-item"><i class="bi bi-rulers"></i> Lenght</a>
-                        <a href="cdata.html" class="dropdown-item"><i class="bi bi-server"></i> Data</a>
-                        <a href="cvolume.html" class="dropdown-item"><i class="bi bi-box"></i> Volume</a>
-                        <a href="ctime.html" class="dropdown-item"><i class="bi bi-clock-fill"></i> Time</a>
                         <a href="ctemp.html" class="dropdown-item"><i class="bi bi-thermometer"></i> Temperature</a>
                         <a href="cspeed.html" class="dropdown-item"><i class="bi bi-speedometer"></i> Speed</a>
                         <a href="cweight.html" class="dropdown-item"><i class="bi bi-minecart-loaded"></i> Weight</a>
-                        <a href="cenergy.html" class="dropdown-item"><i class="bi bi-lightning-fill"></i> Energy</a>
-                        <a href="cpower.html" class="dropdown-item"><i class="bi bi-battery-half"></i> Power</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -135,30 +136,22 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Algebra
+                        Contact
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <h5 class="dropdown-header">Basic Algebra</h5>
-                        <a href="logar.html" class="dropdown-item"><i class="bi bi-percent"></i> Logarithms</a>
-                        <a href="sqrt.html" class="dropdown-item"><i class="bi bi-calculator"></i> Square Root Calculator</a>
-                        <a href="cbrt.html" class="dropdown-item"><i class="bi bi-calculator"></i> Cube Root Calculator</a>
-                        <a href="pow.html" class="dropdown-item"><i class="bi bi-power"></i> Exponents(powers)</a>
-                        <a href="avg.html" class="dropdown-item"><i class="bi bi-pie-chart"></i> Average Calculator</a>
-                        <a href="percent.html" class="dropdown-item"><i class="bi bi-percent"></i> Percentage Calculator</a>
-                        <a href="round.html" class="dropdown-item"><i class="bi bi-arrows-expand"></i> Round Numbers</a>
-                        <a href="fact.html" class="dropdown-item"><i class="bi bi-exclamation-lg"></i> Factorials</a>
-                        <div class="dropdown-divider"></div>
-                        <h5 class="dropdown-header">Equations</h5>
-                        <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
-                        <a href="equations-second.html" class="dropdown-item"><i class="bi bi-percent"></i> 2nd Degree</a>
-                        <div class="dropdown-divider"></div>
-                        <h5 class="dropdown-header">Systems of Equations</h5>
-                        <a href="linear-systems.html" class="dropdown-item"><i class="bi bi-border-width"></i> Linear Systems</a>
+                        <a href="contact.html" class="dropdown-item"><i class="bi bi-telephone-fill"></i> Contact Form</a>
+                        <a href="https://github.com/mathflare" target="_blank" class="dropdown-item"><i class="bi bi-github"></i> GitHub</a>
+                        <a href="mailto:mathflare@dkatsios.tk" target="_blank" class="dropdown-item"><i class="bi bi-envelope-fill"></i> Email</a>
+                        <a href="https://www.instagram.com/mathflare/" class="dropdown-item"><i class="bi bi-instagram"></i> Instagram</a>
+                        <a href="https://api.mathflare.tk" target="_blank" class="dropdown-item"><i class="bi bi-hdd-stack-fill"></i> REST API</a>
+                        <a href="https://developers.mathflare.tk" target="_blank" class="dropdown-item"><i class="bi bi-code-slash"></i> For Developers</a>
+                        <a href="https://github.com/mathflare/mathflare/issues" target="_blank" class="dropdown-item"><i class="bi bi-bug-fill"></i> Report a Bug</a>
+                        <a href="https://github.com/mathflare/mathflare/issues" target="_blank" class="dropdown-item"><i class="bi bi-lightbulb-fill"></i> Suggest an Edit</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="formulas.html"><i class="bi bi-book"></i> Formulas</a>
+                    <a class="nav-link" href="formulas.html"><i class="bi bi-book"></i> Cheat Sheet</a>
                 </li>
             </ul>
         </div>
