prod: use typescript

--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
     <div class="center">
         <h1 class="text-white">Contact MathFlare</h1>
         <hr class="bg-danger" style="width: 60%; margin: auto;" />
-            <form id="contact-form" autocomplete="off">
+            <form id="contact-form" autocomplete="on">
                 <p class=" text-white"><i class="bi bi-lightbulb"></i> Tip: Include your name in the subject of the email</p>
                 <div class="center-form">
                     <input type="text" id="subj" name="subject" placeholder="Subject (Include First and Last Name)" class="form-control mb-0" required/>
@@ -173,10 +173,11 @@
                     <textarea id="msg" name="text" placeholder="Message" class="form-control message" required></textarea>
                 </div>
                     <div class="button-group my-3">
-                        <input type="submit" name="send" value="Send" class="btn btn-success mx-1"/>
-                        <input type="submit" id="clear" value="Clear" class="btn btn-danger mx-1"/>
+                        <input type="submit" id="send" name="send" value="Send" class="btn btn-success mx-1"/>
+                        <input type="reset" value="Clear" class="btn btn-danger mx-1"/>
                     </div>
             </form>
+            <p id="user-message"></p>
             <div class="container-sm">
                 <p>While you are writing us an email, let us tell you a little bit about our website, MathFlare (previously known as "Liquid Geometry")!
                  So the pro`ject started as a desktop application using 
@@ -193,40 +194,6 @@
     <script src="dist/SignOut.js"></script>
     <script src="dist/OnSignOut.js"></script>
     <script src="dist/contact.mail.js"></script>
-    <script>
-        $(document).ready(function () {
-            var counter = 0;
-            $("#clear").click(clear = (e) => { 
-                e.preventDefault();
-                counter ++;
-                if(counter > 20) {
-                  console.warn('Holy guacamole! you are pressing too many buttons!')
-                    $("#clear").val('Slow Down!');
-                    $("#clear").prop('disabled',true);
-                    setTimeout(iamspeed = () => {
-                        $("#clear").val('Clear');
-                        $("#clear").prop('disabled',false);
-                        counter = 0;
-                        }, 8000);
-                }
-                const subj = $("#subj").val();
-                const msg = $("#msg").val();
-                if(subj == "" && msg == "") {
-                    $("#contact-form").append(`
-                    <p class="text-warning user-message-mail" id="warn">
-                        there is nothing to clear
-                    </p>
-                `);
-                    setTimeout(function(){
-                    $("#warn").remove();
-                    }, 4000);
-                } else {
-                    $("#subj").val(null);
-                    $("#msg").val(null);
-                }
-            });
-        });
-    </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
