beta: trapezoid diagonal calc

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
     <script src="dist/SignIn.js"></script>
     <script src="dist/SignOut.js"></script>
     <script src="dist/OnSignOut.js"></script>
+    <script src="dist/diagtrapezoid.js"></script>
     <script>
         var storage = window.localStorage, pageCount;
         window.addEventListener('load', () => {
