other: updated tos

--- a/tos.html
+++ b/tos.html
@@ -162,7 +162,7 @@
     <div class="text-white m-4">
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
-        <p>Your privacy is important to us. It is MathFlare&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.mathflare.tk">https://www.mathflare.tk</a>, and other sites we own and operate. </p>
+        <p>Your privacy is important to us. It is MathFlare&#39;s Co. Ltd. policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.mathflare.tk">https://www.mathflare.tk</a>, and other sites we own and operate. </p>
         <p>This policy is effective as of 20 April 2021 and was last updated on 6 July 2021.</p>
         </section>
         <section id="important-notice">
@@ -209,11 +209,13 @@
             saradis.m06@gmail.com
         </p>
         <p>
-            Corporation<br />
+            MathFlare Co. Ltd.<br />
             mathflare@dkatsios.tk
         </p>
         <p>Or use our <a href="contact.html">Contact Form</a></p>
         </section>
+        <hr>
+        <footer><p>&copy;2021 MathFlare Co. Ltd.</p></footer>
     </div>
     <!-- TOS END -->
     <!-- SCRIPTS START -->
